# Digital-Signal-Processing-Server

./: .gitignore  CMakeLists.txt  README.md  T3CXX.md  build_script.sh  conanfile.txt  config.json
source/: ini.cpp
source/config/: config_reader.cpp  config_reader.h
source/easylogging/: easylogging++.h  logger.cpp  logger.h
source/include/: globals.h  nlohmann_json.hpp
source/network/: tcp_server.cpp  tcp_server.h
source/proccessing/: signal_proccessing.cpp  signal_proccessing.h
tests/: CMakeLists.txt  test_client.cpp  unit_tests.cpp
